<resources>
    <string name="app_name">star</string>
    <string name="title_home">首页</string>
    <string name="title_cart">购物车</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="person_center">个人中心</string>
    <string name="login_hint">点击登录/注册</string>
    <string name="all_order">全部订单</string>
    <string name="pending_payment">待付款</string>
    <string name="to_be_received">待收货</string>
    <string name="be_evaluated">待评价</string>
    <string name="return_the_goods">退货</string>
    <string name="my_order">我的订单</string>
    <string name="logout">退出登录</string>
    <string name="team_management">团队管理</string>
    <string name="complete_material">完善资料</string>
    <string name="my_wish">我的收藏</string>
    <string name="browsing_history">浏览历史</string>
    <string name="address_management">地址管理</string>
    <string name="online_service">在线客服</string>
    <string name="contact_us">联系我们</string>
    <string name="about_us">关于我们</string>
</resources>