<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/homeFragment">

    <keep_state_fragment
        android:id="@+id/homeFragment"
        android:name="com.dx.star.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <keep_state_fragment
        android:id="@+id/cartFragment"
        android:name="com.dx.star.ui.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" />

    <keep_state_fragment
        android:id="@+id/myFragment"
        android:name="com.dx.star.ui.my.MyFragment"
        android:label="@string/person_center"
        tools:layout="@layout/fragment_my" />
</navigation>